--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     ],
     "require": {
         "php": ">=5.5.0",
-        "nikic/fast-route": "dev-master",
+        "nikic/fast-route": "0.3.0",
         "opine/interfaces": "dev-master"
     },
     "require-dev": {
