--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,13 @@
     "require": {
         "php": ">=5.5.0",
         "nikic/fast-route": "0.3.0",
-        "opine/interfaces": "dev-master"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "3.7.32",
-        "opine/config": "dev-master",
+        "opine/interfaces": "dev-master",
+        "opine/config": "3.0.0",
         "opine/container": "dev-master",
         "opine/bundle": "dev-master"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "3.7.32"
     },
     "autoload": {
         "psr-4": {
