--- a/composer.json
+++ b/composer.json
@@ -11,19 +11,19 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Ryan Mahoney",
-            "email": "ryan@virtuecenter.com",
+            "name"    : "Ryan Mahoney",
+            "email"   : "ryan@virtuecenter.com",
             "homepage": "http://opine-php.org",
-            "role": "Developer"
+            "role"    : "Developer"
         }
     ],
     "require": {
-        "php": ">=5.5.0",
+        "php"             : ">=5.5.0",
         "nikic/fast-route": "0.3.0",
-        "opine/interfaces": "dev-master",
-        "opine/config": "3.0.0",
-        "opine/container": "dev-master",
-        "opine/bundle": "dev-master"
+        "opine/interfaces": "1.0.0",
+        "opine/config"    : "3.0.0",
+        "opine/container" : "dev-master",
+        "opine/bundle"    : "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.32"
