--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "nikic/fast-route": "0.3.0",
         "opine/interfaces": "1.0.0",
         "opine/config"    : "3.0.0",
-        "opine/container" : "dev-master",
+        "opine/container" : "2.0.2",
         "opine/bundle"    : "dev-master"
     },
     "require-dev": {
