--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "opine/interfaces": "1.0.0",
         "opine/config"    : "3.0.0",
         "opine/container" : "2.0.2",
-        "opine/bundle"    : "dev-master"
+        "opine/bundle"    : "1.9.0"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.32"
