--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
         "nikic/fast-route": "0.3.0",
         "opine/interfaces": "1.0.0",
         "opine/config"    : "3.0.0",
-        "opine/container" : "2.0.2",
-        "opine/bundle"    : "1.9.0"
+        "opine/container" : "2.0.3",
+        "opine/bundle"    : "2.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.32"
@@ -32,5 +32,6 @@
         "psr-4": {
             "Opine\\Route\\": "src/"
         }
-    }
+    },
+    "version": "3.0.2"
 }
