--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,10 @@
     "require": {
         "php"             : ">=5.5.0",
         "nikic/fast-route": "0.3.0",
-        "opine/interfaces": "1.0.1",
-        "opine/config"    : "3.0.2",
-        "opine/container" : "2.0.5",
-        "opine/bundle"    : "2.0.2"
+        "opine/interfaces": "~1.0",
+        "opine/config"    : "~3.0",
+        "opine/container" : "~2.0",
+        "opine/bundle"    : "~2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.32"
@@ -32,5 +32,5 @@
             "Opine\\Route\\": "src/"
         }
     },
-    "version": "3.0.4"
+    "version": "3.0.6"
 }
