--- a/composer.json
+++ b/composer.json
@@ -17,20 +17,20 @@
         }
     ],
     "require": {
-        "php"             : ">=5.5.0",
-        "nikic/fast-route": "0.3.0",
+        "php"             : ">=7.0.0",
+        "nikic/fast-route": "1.0.1",
         "opine/interfaces": "~1.0",
-        "opine/config"    : "~3.0",
-        "opine/container" : "~2.0",
-        "opine/bundle"    : "~2.0"
+        "opine/config"    : "3.0.12",
+        "opine/container" : "2.0.11",
+        "opine/bundle"    : "2.0.14"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.32"
+        "phpunit/phpunit": "5.5"
     },
     "autoload": {
         "psr-4": {
             "Opine\\Route\\": "src/"
         }
     },
-    "version": "3.0.10"
+    "version": "3.0.11"
 }
