--- a/composer.json
+++ b/composer.json
@@ -20,17 +20,17 @@
         "php"             : ">=7.0.0",
         "nikic/fast-route": "1.0.1",
         "opine/interfaces": "~1.0",
-        "opine/config"    : "3.0.12",
-        "opine/container" : "2.0.11",
-        "opine/bundle"    : "2.0.14"
+        "opine/config"    : "~3.0",
+        "opine/container" : "~2.0",
+        "opine/bundle"    : "~2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.5"
+        "phpunit/phpunit": "5.5.0"
     },
     "autoload": {
         "psr-4": {
             "Opine\\Route\\": "src/"
         }
     },
-    "version": "3.0.11"
+    "version": "3.0.12"
 }
