--- a/composer.json
+++ b/composer.json
@@ -16,17 +16,20 @@
             "role"    : "Developer"
         }
     ],
+    "minimum-stability ": "stable",
     "require": {
         "php"             : ">=7.0.0",
         "nikic/fast-route": "1.0.1",
         "opine/interfaces": "^1.0",
         "opine/config"    : "^3.0",
         "opine/container" : "^2.0",
-        "opine/bundle"    : "^2.0.17"
+        "opine/bundle"    : "^2.0.17",
+        "opine/user"      : "^1.0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "5.5.0"
     },
+    "version": "3.0.14",
     "autoload": {
         "psr-4": {
             "Opine\\Route\\": "src/"
